--- a/codefresh.yml
+++ b/codefresh.yml
@@ -3,7 +3,7 @@ version: '1.0'
 steps:
   build-example:
     type: build
-    description: build yarn 
+    description: build yarn
     image-name: codefresh-io/node-yarn
     dockerfile: ./node_yarn/Dockerfile
     tag: latest
@@ -14,6 +14,6 @@ steps:
       - yarn install
 
   yarn-install-test:
-    image: node_yarn:latest
+    image: codefresh-io/node-yarn:latest
     commands:
       - yarn install
